Added initial migration

--- a/CleanArch/CleanArch.Mvc/appsettings.json
+++ b/CleanArch/CleanArch.Mvc/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-CleanArch.Mvc-588C222D-979A-4AE8-99A1-C1AC27E76735;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "UniversityIdentityDBConnection": "Server=(localdb)\\mssqllocaldb;Database=UniversityIdentityDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
